# iterpy

./: .cookiecutter.json  .copier-answers.yml  .cruft.json  .gitignore  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  dev-requirements.txt  integator.toml  lefthook.yml  mise.toml  pyproject.toml  pyrightconfig.json  requirements.txt
.devcontainer/: devcontainer.json  devcontainer.json.rej  post_create.sh
.github/: dependabot.yml  recommended_repo_setup.md
.github/workflows/: codspeed.yml  dependabot.yml  dependabot_automerge.yml  release.yml  test.yml  tests.yml
FunctionalPython/: __init__.py  sequence.py  test_sequence.py
FunctionalPython.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
FunctionalPython/benchmark/: utils.py
FunctionalPython/benchmark/query_1/: input_data.py  iterators_q1.py  polars_q1.py
FunctionalSequentialPython/: test_sequence.py
FunctionalSequentialPython/benchmark/query_1/: iterators_q1.py  polars_q1.py
docs/: CODE_OF_CONDUCT.md  conf.py  faq.md  index.md  installation.md
docs/api/: docs_example.md
functionalpy/: __init__.py  _generate_pyi.py  _sequence.py  _sequence.pyi  sequence.py  test_sequence.py
functionalpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
functionalpy/benchmark/: utils.py
functionalpy/benchmark/query_1/: iterators_q1.py  polars_q1.py
iter/: __init__.py  _generate_pyi.py  _iter.py  _iter.pyi  test_iter.py
iter/benchmark/query_1/: iterators_q1.py  polars_q1.py
iterpy/: __init__.py  _generate_pyi.py  _iter.py  _iter.pyi  arr.py  iter.py  iter.pyi  test_arr.py  test_benchmark_iter.py  test_iter.py
iterpy/benchmark/query_1/: iterators_q1.py  polars_q1.py
src/FunctionalPython/: benchmark.py  sequence.py  test_sequence.py
src/FunctionalPython/benchmark/: utils.py
src/FunctionalPython/benchmark/query_1/: iterators_q1.py  polars_q1.py
tests/: first_test.py
