[project]
version = "1.8.1"
requires-python = ">=3.9"
name = "iterpy"
description = "iterpy"
dependencies = []
authors = [{ name = "Martin Bernstorff", email = "martinbernstorff@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.license]
file = "LICENSE"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
dev = [
  "cruft==2.15.0",
  "lumberman",
  "pyright==1.1.352",
  "pytest==8.1.0",
  "pytest-cov==4.1.0",
  "pytest-xdist==3.5.0",
  "pytest-sugar==1.0.0",
  "pytest-codspeed",
  "diff-cover==8.0.3",
  "ruff==0.3.0",
]

[tool]
rye = { dev-dependencies = [
  "cruft==2.15.0",
  "lumberman>=0.45.0",
  "pyright==1.1.352",
  "pytest==8.1.0",
  "pytest-cov==4.1.0",
  "pytest-xdist==3.5.0",
  "pytest-sugar==1.0.0",
  "pytest-codspeed>=2.2.0",
  "diff-cover==8.0.3",
  "ruff==0.3.0",
] }

[project.urls]
homepage = "https://github.com/MartinBernstorff/iterpy"
repository = "https://github.com/MartinBernstorff/iterpy"
documentation = "https://MartinBernstorff.github.io/iterpy/"

[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["py.typed", "*.pyi"]

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m pip install build; python -m build"
