[project]
version = "1.12.0"
requires-python = ">=3.9"
name = "iterpy"
description = "iterpy"
dependencies = []
authors = [{ name = "Martin Bernstorff", email = "martinbernstorff@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.license]
file = "LICENSE"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[dependency-groups]
dev = [
  "cruft==2.15.0",
  "lumberman",
  "pyright==1.1.363",
  "pytest==8.2.1",
  "pytest-xdist==3.6.1",
  "pytest-sugar==1.0.0",
  "pytest-codspeed",
  "ruff==0.4.4",
  "ty>=0.0.3",
  "mypy>=1.19.1",
]

[project.urls]
homepage = "https://github.com/MartinBernstorff/iterpy"
repository = "https://github.com/MartinBernstorff/iterpy"
documentation = "https://MartinBernstorff.github.io/iterpy/"

[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["py.typed", "*.pyi"]

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m pip install build; python -m build"
